syntax = "proto3";

message CreateAccountRequest {
    string Login = 1;
    string Password = 2;
}

message CreateReply {
    string Status = 1;
}

message CreateRenWuRequest{
    string Login = 1;
    string Name = 2 ;
    string Sex = 3;
    string Race = 4;
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginReply {
    string Name = 1;
    int32 Sex = 2;
    int32 Life = 3;
    int32 Magic = 4;
    int32 Physical = 5;
    int32 Sorcery = 6;
    int32 DefensePhysical = 7;
    int32 DefenseSorcery = 8;
    int32 X = 11;
    int32 Y = 12;
}

service GameLoginService {
    rpc CreateAccount (CreateAccountRequest) returns (CreateReply);
    rpc CreateName (CreateRenWuRequest) returns (CreateReply);
    rpc GameLogin (LoginRequest) returns (LoginReply);
}